--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.4
   firebase_auth: ^4.4.2
   firebase_core: ^2.4.0
+  firebase_database: ^10.1.0
   hive: 2.2.3
   path_provider: 2.0.11
   provider: 6.0.5
